# zech.sh

./: .dockerignore  .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  app.development.yaml  compose.yaml  package-lock.json  package.json  pyproject.toml
zech.sh/: .dockerignore  .gitignore  Dockerfile  app.dev.yaml  app.yaml  compose.yaml  main.py  pyproject.toml
zech.sh/content/: about.md  community.md  work.md
zech.sh/controllers/: __init__.py  admin_import_posts.py  admin_integrations.py  admin_usage.py  aichat.py  api_auth.py  brave_search.py  chat_agent.py  chat_controller.py  deep_research_agent.py  domain_throttle.py  dump.py  experimental_lite_agent.py  health.py  llm.py  redirects.py  research_agent.py  robots.py  scan.py  scan_agent.py  scan_api.py  uploads.py
zech.sh/docs/: research-agent.md
zech.sh/exported posts/: blog-posts-import.xml
zech.sh/k8s/: configmap.yaml  deploy.yaml  ingress.yaml  init-db-job.yaml  redirect-ingress.yaml  secrets.template.yaml
zech.sh/mockups/: design-1-neural.html  design-10-phantom.html  design-11-hyperactive.html  design-12-whisper.html  design-13-denseweb.html  design-14-pulse.html  design-15-storm.html  design-16-magnetic.html  design-17-fusion.html  design-2-terminal.html  design-3-holographic.html  design-4-geometric.html  design-5-cyberpunk.html  design-6-bloodline.html  design-7-toxic.html  design-8-arctic.html  design-9-solar.html
zech.sh/models/: __init__.py  ai_chat.py  ai_chat_channel.py  ai_chat_device.py  chat.py  page_image.py  robots_txt_cache.py
zech.sh/planning/: storage-backends.md
(+171 files in other folders)
