[project]
name = "zech-sh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-ai-slim[google]>=1.62.0",
    "pypdf>=5.0.0",
    "skrift[logfire]>=0.1.0a47",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
